<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ARena</string>
    <string name="scan_arena">Scan een Arena</string>
    <string name="use_previous">Gebruik de laatste Arena</string>
    <string name="manual">Handleiding</string>
    <string name="online_mode">Online Modus</string>
    <string name="offline_mode">Offline Modus</string>
    <string name="offline_explanation">Om gebruik te maken van de offline modus, moet de data eenmalig opgehaald worden via het internet.</string>
    <string name="internet_status_connected">Internet verbinding: aan</string>
    <string name="internet_status_disconnected">Internet verbinding: uit</string>
    <string name="continue_to_next">Doorgaan</string>
    <string name="download_data">Download gegevens</string>
    <string name="data_already_downloaded">De gegevens zijn al gedownload. U kunt doorgaan</string>
    <string name="click_here_send_answers">Klik hier om de antwoorden te versturen</string>
	<string name="send_answers">Er is / zijn op dit moment </string>
	<string name="send_answers_2"> antwoorden die nog niet verstuurd zijn.</string>
	<string name="fill_answer">Vul het antwoord hier in</string>
	<string name="send_answers_button">Stuur de antwoorden op.</string>
	
	
</resources>