<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/offlineTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/offline_explanation"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#333" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_margin="5dip"
        android:background="#AAA" >
    </RelativeLayout>

    <TextView
        android:id="@+id/connectionStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/internet_status_connected"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#0b0" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_margin="5dip"
        android:background="#AAA" >
    </RelativeLayout>

    <TextView
        android:id="@+id/alreadyDownloaded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/data_already_downloaded"
        android:textColor="#0b0"  />

    <Button
        android:id="@+id/downloadDataButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/download_data" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_margin="5dip"
        android:background="#AAA" >
    </RelativeLayout>

    <Button
        android:id="@+id/continueButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/continue_to_next" />

</LinearLayout>