<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/arena"
        android:layout_margin="4pt" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="bottom"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_margin="5dip"
            android:background="#AAA" >
        </RelativeLayout>

        <Button
            android:id="@+id/scanButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan_arena" />

        <Button
            android:id="@+id/usePrevious"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_previous" />
    </LinearLayout>

    <ToggleButton
        android:id="@+id/offlineToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/offline_mode"
        android:textOn="@string/online_mode"
        android:checked="true" />

</LinearLayout>