<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#FFF">
    
    <TextView
        android:id="@+id/connectionStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/internet_status_connected"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#0b0" />
        
     <TextView
        android:id="@+id/sendTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/send_answers"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#333" />
    
     <Button
        android:id="@+id/sendButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/send_answers_button" />

</LinearLayout>